--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<!-- 
-  Hello 😊.
-
-  This template is designed and developed by Nisar Hassan Naqvi
-  for anyone to use for free or customize the way they like.
-
-  Github Repo: https://github.com/nisarhassan12/portfolio-template/
-  My Website: https://nisar.dev
-
-  For business & inquires, contact me => syednisarhassan12@gmail.com
--->
-
-<!--
-  Follow the instructions written in comments to create your stunning portfolio
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +8,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Rhea Ramachandran | Computer Science Student at Emory University
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -32,7 +16,6 @@
   <meta name="keywords" content="Put your name, skills and some coding keywords" />
   <link rel="stylesheet" href="index.css" />
 </head>
-
 <body>
 
   <!-- ***** Header ***** -->
@@ -41,13 +24,12 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
+          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
           <li class="nav__item">
-            <a href="#contact" class="nav__link">Contact</a>
+            <a href="https://medium.com/@sjmajum/reflections-on-learning-user-experience-design-a-manifesto-2fa3c7590e42" class="nav__link">Manifesto</a>
           </li>
         </ul>
       </nav>
@@ -56,16 +38,42 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Suvra Majumder</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
-        <a href="#contact" class="btn btn--pink">Get in touch</a>
+        <p>UX Designer based in Atlanta, GA</p>
+        <a href="https://medium.com/@sjmajum/reflections-on-learning-user-experience-design-a-manifesto-2fa3c7590e42" class="btn btn--pink">Read my manifesto!</a>
       </div>
     </div>
   </header>
 
   <main role="main">
+
+        <!-- ***** About ***** -->
+
+        <section class="about" id="about">
+          <div class="row">
+            <h2>About Me</h2>
+            <div class="about__content">
+              <div class="about__text">
+                <!-- Replace the below paragraph with info about yourself -->
+                <p>Hey, I'm <span style="color: #db8696; ">Suvra</span>!</p>
+
+                  <p>As a UX Designer, I love working on creating solutions that provide an intuitive and impactful experience for all types of users.</p>
+                  
+                  <p> I graduated from Emory University with BAs in <span style="color: #db8696; ">Computer Science</span> and <span style="color: #db8696; ">Economics</span> which has proven to only enhance my work in user-centered design. </p>
+                <!-- Provide a link to your resume -->
+                <!-- <a href="#" class="btn">My Resume</a> -->
+              </div>
+    
+              <div class="about__photo-container">
+                <!-- Add a nice photo of yourself -->
+                <img class="about__photo" src="./images/profilepic.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
 
     <!-- ***** Work ***** -->
 
@@ -78,192 +86,125 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Dave's Cosmic Subs Revamp</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                A redesign of Dave's website and introduction  of innovative smart watch and large hub display designs.
+              </p>
+              <ul class="work__list">
+                <li>Figma</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://medium.com/@sjmajum/redesigning-daves-cosmic-sub-s-website-cs485-designing-for-dimensions-7ba6d841b0f3" target="_blank" class="link__text">
+                  Read more <span>&rarr;</span>
+                </a>
+                <!-- <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank"> -->
+                  <!-- <img src="./images/github.svg" class="work__code" alt="GitHub"> -->
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/daves1.png" class="work__image" alt="Project 1" />
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Dave's Cosmic Vending Machine</h3>
+              <p>
+                Looking back at our original designs and creating a vending machine prototype to enhance the lives of college students.
+              </p>
+              <ul class="work__list">
+                <li>Figma</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://medium.com/@sjmajum/from-redesigns-to-prototypes-the-evolution-of-daves-cosmic-vending-machine-608d5c43562c" class="link__text">
+                  Read more <span>&rarr;</span>
+                </a>
+                <a href="#">
+                  <!-- <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub"> -->
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/daves.png" class="work__image" alt="Project 1" />
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Visualizing the NBA</h3>
+              <p>
+                Taking a look at the NBA and the relationships within.
               </p>
               <ul class="work__list">
                 <li>HTML</li>
-                <li>SCSS</li>
+                <li>JSON</li>
                 <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>VegaLite</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                <a href="https://medium.com/@sjmajum/the-nba-in-numbers-visualizing-the-game-7b93ca0e18bf" class="link__text">
+                  Read more <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                <a href="#">
+                  <!-- <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub"> -->
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/nba.png" class="work__image" alt="Project 3" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>A Magical Journey into VR</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                 Creating a unique cooking simulator to transport users into a magical world and experience the life of a witch!
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>A-Frame</li>
+                <li>HTML</li>
+                <li>Glitch</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                <a href="https://medium.com/@sjmajum/a-magical-journey-into-vr-a-look-into-our-unique-cooking-simulator-d562a48c1e98" class="link__text">
+                  Read more <span>&rarr;</span>
                 </a>
                 <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                  <!-- <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub"> -->
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./images/cauldron.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
-          <div class="work__box">
-            <div class="work__text">
-              <h3>Notificator</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
-              </p>
-              <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
-              </ul>
 
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
-              </div>
-            </div>
-            <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
-            </div>
-          </div>
         </div>
       </div>
     </section>
-
-    <!-- ***** Clients ***** -->
-
-    <section class="client" id="clients">
-      <div class="row">
-        <h2>Clients</h2>
-        <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
-        </div>
-      </div>
-    </section>
-
-    <!-- ***** About ***** -->
-
-    <section class="about" id="about">
-      <div class="row">
-        <h2>About Me</h2>
-        <div class="about__content">
-          <div class="about__text">
-            <!-- Replace the below paragraph with info about yourself -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
-            </p>
-            <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
-          </div>
-
-          <div class="about__photo-container">
-            <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- ***** Contact ***** -->
-
-  <section class="contact" id="contact">
-    <div class="row">
-      <h2>Get in Touch</h2>
-      <div class="contact__info">
-        <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
-        </p>
-        <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- ***** Footer ***** -->
 
   <footer role="contentinfo" class="footer">
     <div class="row">
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
-            <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
+          <a href="https://github.com/rheara4" title="Link to Github Profile">
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
-            <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
-            <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+          <a href="https://www.linkedin.com/in/rhea-ramachandran-b4a9bb18a/">
+            <img src="./images/MyLinkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
       </ul>
-
-      <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
-      <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
-      </p>
-      <div class="footer__github-buttons">
-        <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
-          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
-      </div>
     </div>
   </footer>
 
