--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </li>
           <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
           <li class="nav__item">
-            <a href="https://medium.com/@sjmajum/reflections-on-learning-user-experience-design-a-manifesto-2fa3c7590e42" class="nav__link">Manifesto</a>
+            <a href="https://medium.com/@rheara4/design-manifesto-83a29b37ee6f" class="nav__link">Manifesto</a>
           </li>
         </ul>
       </nav>
@@ -38,11 +38,11 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Suvra Majumder</span>
+          <span>Rhea Ramachandran</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>UX Designer based in Atlanta, GA</p>
-        <a href="https://medium.com/@sjmajum/reflections-on-learning-user-experience-design-a-manifesto-2fa3c7590e42" class="btn btn--pink">Read my manifesto!</a>
+        <p>Computer Science student based in Atlanta, GA</p>
+        <a href="https://medium.com/@rheara4/design-manifesto-83a29b37ee6f" class="btn btn--pink">Take a look at my manifesto!</a>
       </div>
     </div>
   </header>
@@ -57,18 +57,18 @@
             <div class="about__content">
               <div class="about__text">
                 <!-- Replace the below paragraph with info about yourself -->
-                <p>Hey, I'm <span style="color: #db8696; ">Suvra</span>!</p>
+                <p>Hey, I'm <span style="color: #db8696; ">Rhea</span>!</p>
 
-                  <p>As a UX Designer, I love working on creating solutions that provide an intuitive and impactful experience for all types of users.</p>
+                  <p>As a woman in technology, I am curious to explore different facets of human computer interaction.</p>
                   
-                  <p> I graduated from Emory University with BAs in <span style="color: #db8696; ">Computer Science</span> and <span style="color: #db8696; ">Economics</span> which has proven to only enhance my work in user-centered design. </p>
+                  <p> I graduated from Emory University with BS in <span style="color: #db8696; ">Computer Science</span> </p>
                 <!-- Provide a link to your resume -->
                 <!-- <a href="#" class="btn">My Resume</a> -->
               </div>
     
               <div class="about__photo-container">
                 <!-- Add a nice photo of yourself -->
-                <img class="about__photo" src="./images/profilepic.png" alt="" />
+                <img class="about__photo" src="MyLinkedin.svg" alt="" />
               </div>
             </div>
           </div>
@@ -86,16 +86,16 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Dave's Cosmic Subs Revamp</h3>
+              <h3>Redesigning the ATL Airport Website</h3>
               <p>
-                A redesign of Dave's website and introduction  of innovative smart watch and large hub display designs.
+                Digital displays have become a hallmark of the internet age, from electronic billboards designed for large audiences to tablets designed for personal use. To accommodate the variety of devices used by travelers, we were challenged to redesign the ATL website for 3 screen sizes: an Apple Watch, a desktop computer, and a large multi-modal display like the Microsoft Surface Hub.
               </p>
               <ul class="work__list">
                 <li>Figma</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://medium.com/@sjmajum/redesigning-daves-cosmic-sub-s-website-cs485-designing-for-dimensions-7ba6d841b0f3" target="_blank" class="link__text">
+                <a href="https://medium.com/@jordanleslie/6169e6759257" target="_blank" class="link__text">
                   Read more <span>&rarr;</span>
                 </a>
                 <!-- <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank"> -->
@@ -104,7 +104,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/daves1.png" class="work__image" alt="Project 1" />
+              <img src="./images/Airport.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
