--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@
               <p>
                 Digital displays have become a hallmark of the internet age, from electronic billboards designed for large audiences to tablets designed for personal use. To accommodate the variety of devices used by travelers, we were challenged to redesign the ATL website for 3 screen sizes: an Apple Watch, a desktop computer, and a large multi-modal display like the Microsoft Surface Hub.
               </p>
-              <ul class="work__list">
-                <li>Figma</li>
-              </ul>
 
               <div class="work__links">
                 <a href="https://medium.com/@jordanleslie/6169e6759257" target="_blank" class="link__text">
@@ -110,16 +107,13 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Dave's Cosmic Vending Machine</h3>
+              <h3>Design for Understanding: Nuclear Explosions</h3>
               <p>
-                Looking back at our original designs and creating a vending machine prototype to enhance the lives of college students.
+                Visualizations are more than just graphics. Information visualizations are powerful tools, unveiling insights that remain obscured within raw data alone. In this design sprint, we proved just that. This sprint was dedicated to designing for understanding, which was achieved by exploring the relationships that define data viz: representation and interaction. More specifically, we represented the data on nuclear explosions from 1945 to 2000.
               </p>
-              <ul class="work__list">
-                <li>Figma</li>
-              </ul>
 
               <div class="work__links">
-                <a href="https://medium.com/@sjmajum/from-redesigns-to-prototypes-the-evolution-of-daves-cosmic-vending-machine-608d5c43562c" class="link__text">
+                <a href="https://medium.com/@tierranaa29/design-for-understanding-the-analysis-and-storytelling-of-nuclear-explosions-5b1695945c3b" class="link__text">
                   Read more <span>&rarr;</span>
                 </a>
                 <a href="#">
@@ -128,7 +122,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/daves.png" class="work__image" alt="Project 1" />
+              <img src="./Images/NuclearExplosions.webp" class="work__image" alt="Project 2" />
             </div>
           </div>
 
