--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
               <div class="about__photo-container">
                 <!-- Add a nice photo of yourself -->
-                <img class="about__photo" src="MyLinkedin.svg" alt="" />
+                <img class="about__photo" src="./Images/linkedprofilepic.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/Airport.png" class="work__image" alt="Project 1" />
+              <img src="./images/airportdesign.webp" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -190,12 +190,12 @@
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
           <a href="https://github.com/rheara4" title="Link to Github Profile">
-            <img src="./images/github.svg" class="footer__social-image" alt="Github">
+            <img src="./images/GitHub-Mark-ea2971cee799.png" class="footer__social-image" alt="Github">
           </a>
         </li>
         <li class="footer__social-link-item">
           <a href="https://www.linkedin.com/in/rhea-ramachandran-b4a9bb18a/">
-            <img src="./images/MyLinkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+            <img src="./images/LinkedIn_logo_initials.png.webp" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
       </ul>
