--- a/index.html
+++ b/index.html
@@ -128,19 +128,13 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Visualizing the NBA</h3>
+              <h3>Imagination is Gold: Employ VR to Provide an Immersive Visual Experience for People with Aphantasia</h3>
               <p>
-                Taking a look at the NBA and the relationships within.
+                Aphantasia is the inability to create mental imagery. In other words, people who have Aphantasia are unable to create any visual mental image, not even the most familiar scenes, objects, or routes. Psychologists sometimes they would refer to Aphantasia as “mind-blindness,” meaning people cannot create visual imagery or hear their inner voice voluntarily. Therefore, our goal is to employ VR technology to help people who have Aphantasia experience imagination; we aim to help them earn the feeling of creating mental visual imagery.
               </p>
-              <ul class="work__list">
-                <li>HTML</li>
-                <li>JSON</li>
-                <li>JavaScript</li>
-                <li>VegaLite</li>
-              </ul>
 
               <div class="work__links">
-                <a href="https://medium.com/@sjmajum/the-nba-in-numbers-visualizing-the-game-7b93ca0e18bf" class="link__text">
+                <a href="https://medium.com/@rheara4/imagination-is-gold-employ-vr-to-provide-an-immersive-visual-experience-for-people-with-aphantasia-b47c48b5c260" class="link__text">
                   Read more <span>&rarr;</span>
                 </a>
                 <a href="#">
@@ -149,24 +143,19 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/nba.png" class="work__image" alt="Project 3" />
+              <img src="./images/VrImage.webp" class="work__image" alt="Project 3" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>A Magical Journey into VR</h3>
+              <h3>Nuclear Explosions: Re-design & Extend</h3>
               <p>
-                 Creating a unique cooking simulator to transport users into a magical world and experience the life of a witch!
+                For this project, we revisit and extend; extending with the luxuries of physical prototyping. You may be asking what exactly is the need for physicality, well ponder no more. In this design document, we will be detailing our redesign and extension for this nuclear explosion dataset.
               </p>
-              <ul class="work__list">
-                <li>A-Frame</li>
-                <li>HTML</li>
-                <li>Glitch</li>
-              </ul>
 
               <div class="work__links">
-                <a href="https://medium.com/@sjmajum/a-magical-journey-into-vr-a-look-into-our-unique-cooking-simulator-d562a48c1e98" class="link__text">
+                <a href="https://medium.com/@tierranaa29/nuclear-explosions-re-design-extend-4db827f2d230" class="link__text">
                   Read more <span>&rarr;</span>
                 </a>
                 <a href="#">
@@ -175,7 +164,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/cauldron.png" class="work__image" alt="Project 1" />
+              <img src="./images/bomb.webp" class="work__image" alt="Project 4" />
             </div>
           </div>
 
@@ -189,21 +178,15 @@
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://github.com/rheara4" title="Link to Github Profile">
-            <img src="./images/GitHub-Mark-ea2971cee799.png" class="footer__social-image" alt="Github">
-          </a>
+          <a href="https://github.com/rheara4" title="Link to Github Profile"> </a>
         </li>
-        <li class="footer__social-link-item">
-          <a href="https://www.linkedin.com/in/rhea-ramachandran-b4a9bb18a/">
-            <img src="./images/LinkedIn_logo_initials.png.webp" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
-          </a>
+        <li class="footer__social-link-item"> </a>
         </li>
       </ul>
     </div>
   </footer>
 
   <a href="#top" class="back-to-top" title="Back to Top">
-    <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
   </a>
   <script src="./index.js"></script>
 </body>
