--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 <!-- Replace the below paragraph with info about yourself -->
                 <p>Hey, I'm <span style="color: #db8696; ">Rhea</span>!</p>
 
-                  <p>As a woman in technology, I am curious to explore different facets of human computer interaction.</p>
+                  <p>I am currently a Senior at Emory University interested in expanding my skills in software development and UX. I hope to work alongside software professionals to revolutionize customer products and services.</p>
                   
-                  <p> I graduated from Emory University with BS in <span style="color: #db8696; ">Computer Science</span> </p>
+                  <p>In this portfolio, I aim to showcase some of my work in UX design by exploring different facets of human computer interaction.<span style="color: #db8696; ">Computer Science</span> </p>
                 <!-- Provide a link to your resume -->
                 <!-- <a href="#" class="btn">My Resume</a> -->
               </div>
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/airportdesign.webp" class="work__image" alt="Project 1" />
+              <img src="./Images/airportdesign.webp" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -143,7 +143,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/VrImage.webp" class="work__image" alt="Project 3" />
+              <img src="./Images/VrImage.webp" class="work__image" alt="Project 3" />
             </div>
           </div>
 
@@ -164,7 +164,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/bomb.webp" class="work__image" alt="Project 4" />
+              <img src="./Images/bomb.webp" class="work__image" alt="Project 4" />
             </div>
           </div>
 
