--- a/index.html
+++ b/index.html
@@ -178,15 +178,21 @@
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://github.com/rheara4" title="Link to Github Profile"> </a>
+          <a href="https://github.com/rheara4" title="Link to Github Profile">
+            <img src="./Images/github.svg" class="footer__social-image" alt="Github">
+          </a>
         </li>
-        <li class="footer__social-link-item"> </a>
+        <li class="footer__social-link-item">
+          <a href="https://www.linkedin.com/in/rhea-ramachandran-b4a9bb18a/">
+            <img src="./Images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+          </a>
         </li>
       </ul>
     </div>
   </footer>
 
   <a href="#top" class="back-to-top" title="Back to Top">
+    <img src="./Images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
   </a>
   <script src="./index.js"></script>
 </body>
