--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                   <p>I am currently a Senior at Emory University interested in expanding my skills in software development and UX. I hope to work alongside software professionals to revolutionize customer products and services.</p>
                   
-                  <p>In this portfolio, I aim to showcase some of my work in UX design by exploring different facets of human computer interaction.<span style="color: #db8696; ">Computer Science</span> </p>
+                  <p>In this portfolio, I aim to showcase some of my work in UX design by exploring different facets of human computer interaction.</p>
                 <!-- Provide a link to your resume -->
                 <!-- <a href="#" class="btn">My Resume</a> -->
               </div>
