--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./Images/VrImage.webp" class="work__image" alt="Project 3" />
+              <img src="./Images/VrImage.webp" width="400" 
+              height="500" class="work__image" alt="Project 3" />
             </div>
           </div>
 
