--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./Images/airportdesign.webp" class="work__image" alt="Project 1" />
+              <img src="./Images/airportdesign.webp" width="600" 
+              height="400" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -143,8 +144,8 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./Images/VrImage.webp" width="200" 
-              height="300" class="work__image" alt="Project 3" />
+              <img src="./Images/VrImage.webp" width="400" 
+              height="500" class="work__image" alt="Project 3" />
             </div>
           </div>
 
