--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./Images/airportdesign.webp" width="900" 
-              height="900" class="work__image" alt="Project 1" />
+              <img src="./Images/airportdesign.webp" class="work__image" alt="Project 1" />
             </div>
           </div>
 
